refact: criando endpoints de favoritos pelo api.yml
